parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID PV bloco PF
Rule 2     bloco -> declaracoes comando_composto
Rule 3     declaracoes -> VAR declaracao_variaveis
Rule 4     declaracoes -> empty
Rule 5     declaracao_variaveis -> lista_id DP tipo PV declaracao_variaveis
Rule 6     declaracao_variaveis -> lista_id DP tipo PV
Rule 7     lista_id -> ID
Rule 8     lista_id -> ID VIRG lista_id
Rule 9     tipo -> INTEGER
Rule 10    tipo -> BOOLEAN
Rule 11    comando_composto -> BEGIN lista_comandos END
Rule 12    lista_comandos -> comando
Rule 13    lista_comandos -> comando PV lista_comandos
Rule 14    lista_comandos -> comando PV
Rule 15    comando -> atribuicao
Rule 16    comando -> comando_condicional
Rule 17    comando -> comando_enquanto
Rule 18    comando -> comando_leitura
Rule 19    comando -> comando_escrita
Rule 20    comando -> comando_composto
Rule 21    comando -> empty
Rule 22    atribuicao -> ID DPIGUAL expressao
Rule 23    comando_condicional -> IF expressao THEN comando
Rule 24    comando_condicional -> IF expressao THEN comando ELSE comando
Rule 25    comando_enquanto -> WHILE expressao DO comando
Rule 26    comando_leitura -> READ EPAR lista_id DPAR
Rule 27    comando_escrita -> WRITE EPAR lista_expressoes DPAR
Rule 28    lista_expressoes -> expressao
Rule 29    lista_expressoes -> expressao VIRG lista_expressoes
Rule 30    expressao -> expressao OR expressao_and
Rule 31    expressao -> expressao_and
Rule 32    expressao_and -> expressao_and AND expressao_rel
Rule 33    expressao_and -> expressao_rel
Rule 34    expressao_rel -> soma relacao soma
Rule 35    expressao_rel -> soma
Rule 36    soma -> soma MAIS termo
Rule 37    soma -> soma MENOS termo
Rule 38    soma -> termo
Rule 39    termo -> termo VEZES fator
Rule 40    termo -> termo DIV fator
Rule 41    termo -> fator
Rule 42    fator -> ID
Rule 43    fator -> NUMERO
Rule 44    fator -> TRUE
Rule 45    fator -> FALSE
Rule 46    fator -> EPAR expressao DPAR
Rule 47    fator -> NOT fator
Rule 48    fator -> MENOS fator
Rule 49    relacao -> IGUAL
Rule 50    relacao -> DIFERENTE
Rule 51    relacao -> MENORQUE
Rule 52    relacao -> MENORIGUAL
Rule 53    relacao -> MAIORQUE
Rule 54    relacao -> MAIORIGUAL
Rule 55    empty -> <empty>

Terminals, with rules where they appear

AND                  : 32
BEGIN                : 11
BOOLEAN              : 10
DIFERENTE            : 50
DIV                  : 40
DO                   : 25
DP                   : 5 6
DPAR                 : 26 27 46
DPIGUAL              : 22
ELSE                 : 24
END                  : 11
EPAR                 : 26 27 46
FALSE                : 45
ID                   : 1 7 8 22 42
IF                   : 23 24
IGUAL                : 49
INTEGER              : 9
MAIORIGUAL           : 54
MAIORQUE             : 53
MAIS                 : 36
MENORIGUAL           : 52
MENORQUE             : 51
MENOS                : 37 48
NOT                  : 47
NUMERO               : 43
OR                   : 30
PF                   : 1
PROGRAM              : 1
PV                   : 1 5 6 13 14
READ                 : 26
THEN                 : 23 24
TRUE                 : 44
VAR                  : 3
VEZES                : 39
VIRG                 : 8 29
WHILE                : 25
WRITE                : 27
error                : 

Nonterminals, with rules where they appear

atribuicao           : 15
bloco                : 1
comando              : 12 13 14 23 24 24 25
comando_composto     : 2 20
comando_condicional  : 16
comando_enquanto     : 17
comando_escrita      : 19
comando_leitura      : 18
declaracao_variaveis : 3 5
declaracoes          : 2
empty                : 4 21
expressao            : 22 23 24 25 28 29 30 46
expressao_and        : 30 31 32
expressao_rel        : 32 33
fator                : 39 40 41 47 48
lista_comandos       : 11 13
lista_expressoes     : 27 29
lista_id             : 5 6 8 26
programa             : 0
relacao              : 34
soma                 : 34 34 35 36 37
termo                : 36 37 38 39 40
tipo                 : 5 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID PV bloco PF

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID PV bloco PF

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . PV bloco PF

    PV              shift and go to state 4


state 4

    (1) programa -> PROGRAM ID PV . bloco PF
    (2) bloco -> . declaracoes comando_composto
    (3) declaracoes -> . VAR declaracao_variaveis
    (4) declaracoes -> . empty
    (55) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 55 (empty -> .)

    bloco                          shift and go to state 5
    declaracoes                    shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) programa -> PROGRAM ID PV bloco . PF

    PF              shift and go to state 9


state 6

    (2) bloco -> declaracoes . comando_composto
    (11) comando_composto -> . BEGIN lista_comandos END

    BEGIN           shift and go to state 11

    comando_composto               shift and go to state 10

state 7

    (3) declaracoes -> VAR . declaracao_variaveis
    (5) declaracao_variaveis -> . lista_id DP tipo PV declaracao_variaveis
    (6) declaracao_variaveis -> . lista_id DP tipo PV
    (7) lista_id -> . ID
    (8) lista_id -> . ID VIRG lista_id

    ID              shift and go to state 14

    declaracao_variaveis           shift and go to state 12
    lista_id                       shift and go to state 13

state 8

    (4) declaracoes -> empty .

    BEGIN           reduce using rule 4 (declaracoes -> empty .)


state 9

    (1) programa -> PROGRAM ID PV bloco PF .

    $end            reduce using rule 1 (programa -> PROGRAM ID PV bloco PF .)


state 10

    (2) bloco -> declaracoes comando_composto .

    PF              reduce using rule 2 (bloco -> declaracoes comando_composto .)


state 11

    (11) comando_composto -> BEGIN . lista_comandos END
    (12) lista_comandos -> . comando
    (13) lista_comandos -> . comando PV lista_comandos
    (14) lista_comandos -> . comando PV
    (15) comando -> . atribuicao
    (16) comando -> . comando_condicional
    (17) comando -> . comando_enquanto
    (18) comando -> . comando_leitura
    (19) comando -> . comando_escrita
    (20) comando -> . comando_composto
    (21) comando -> . empty
    (22) atribuicao -> . ID DPIGUAL expressao
    (23) comando_condicional -> . IF expressao THEN comando
    (24) comando_condicional -> . IF expressao THEN comando ELSE comando
    (25) comando_enquanto -> . WHILE expressao DO comando
    (26) comando_leitura -> . READ EPAR lista_id DPAR
    (27) comando_escrita -> . WRITE EPAR lista_expressoes DPAR
    (11) comando_composto -> . BEGIN lista_comandos END
    (55) empty -> .

    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 28
    BEGIN           shift and go to state 11
    PV              reduce using rule 55 (empty -> .)
    END             reduce using rule 55 (empty -> .)

    lista_comandos                 shift and go to state 15
    comando                        shift and go to state 16
    atribuicao                     shift and go to state 17
    comando_condicional            shift and go to state 18
    comando_enquanto               shift and go to state 19
    comando_leitura                shift and go to state 20
    comando_escrita                shift and go to state 21
    comando_composto               shift and go to state 22
    empty                          shift and go to state 23

state 12

    (3) declaracoes -> VAR declaracao_variaveis .

    BEGIN           reduce using rule 3 (declaracoes -> VAR declaracao_variaveis .)


state 13

    (5) declaracao_variaveis -> lista_id . DP tipo PV declaracao_variaveis
    (6) declaracao_variaveis -> lista_id . DP tipo PV

    DP              shift and go to state 29


state 14

    (7) lista_id -> ID .
    (8) lista_id -> ID . VIRG lista_id

    DP              reduce using rule 7 (lista_id -> ID .)
    DPAR            reduce using rule 7 (lista_id -> ID .)
    VIRG            shift and go to state 30


state 15

    (11) comando_composto -> BEGIN lista_comandos . END

    END             shift and go to state 31


state 16

    (12) lista_comandos -> comando .
    (13) lista_comandos -> comando . PV lista_comandos
    (14) lista_comandos -> comando . PV

    END             reduce using rule 12 (lista_comandos -> comando .)
    PV              shift and go to state 32


state 17

    (15) comando -> atribuicao .

    PV              reduce using rule 15 (comando -> atribuicao .)
    END             reduce using rule 15 (comando -> atribuicao .)
    ELSE            reduce using rule 15 (comando -> atribuicao .)


state 18

    (16) comando -> comando_condicional .

    PV              reduce using rule 16 (comando -> comando_condicional .)
    END             reduce using rule 16 (comando -> comando_condicional .)
    ELSE            reduce using rule 16 (comando -> comando_condicional .)


state 19

    (17) comando -> comando_enquanto .

    PV              reduce using rule 17 (comando -> comando_enquanto .)
    END             reduce using rule 17 (comando -> comando_enquanto .)
    ELSE            reduce using rule 17 (comando -> comando_enquanto .)


state 20

    (18) comando -> comando_leitura .

    PV              reduce using rule 18 (comando -> comando_leitura .)
    END             reduce using rule 18 (comando -> comando_leitura .)
    ELSE            reduce using rule 18 (comando -> comando_leitura .)


state 21

    (19) comando -> comando_escrita .

    PV              reduce using rule 19 (comando -> comando_escrita .)
    END             reduce using rule 19 (comando -> comando_escrita .)
    ELSE            reduce using rule 19 (comando -> comando_escrita .)


state 22

    (20) comando -> comando_composto .

    PV              reduce using rule 20 (comando -> comando_composto .)
    END             reduce using rule 20 (comando -> comando_composto .)
    ELSE            reduce using rule 20 (comando -> comando_composto .)


state 23

    (21) comando -> empty .

    PV              reduce using rule 21 (comando -> empty .)
    END             reduce using rule 21 (comando -> empty .)
    ELSE            reduce using rule 21 (comando -> empty .)


state 24

    (22) atribuicao -> ID . DPIGUAL expressao

    DPIGUAL         shift and go to state 33


state 25

    (23) comando_condicional -> IF . expressao THEN comando
    (24) comando_condicional -> IF . expressao THEN comando ELSE comando
    (30) expressao -> . expressao OR expressao_and
    (31) expressao -> . expressao_and
    (32) expressao_and -> . expressao_and AND expressao_rel
    (33) expressao_and -> . expressao_rel
    (34) expressao_rel -> . soma relacao soma
    (35) expressao_rel -> . soma
    (36) soma -> . soma MAIS termo
    (37) soma -> . soma MENOS termo
    (38) soma -> . termo
    (39) termo -> . termo VEZES fator
    (40) termo -> . termo DIV fator
    (41) termo -> . fator
    (42) fator -> . ID
    (43) fator -> . NUMERO
    (44) fator -> . TRUE
    (45) fator -> . FALSE
    (46) fator -> . EPAR expressao DPAR
    (47) fator -> . NOT fator
    (48) fator -> . MENOS fator

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 34
    expressao_and                  shift and go to state 35
    expressao_rel                  shift and go to state 36
    soma                           shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 26

    (25) comando_enquanto -> WHILE . expressao DO comando
    (30) expressao -> . expressao OR expressao_and
    (31) expressao -> . expressao_and
    (32) expressao_and -> . expressao_and AND expressao_rel
    (33) expressao_and -> . expressao_rel
    (34) expressao_rel -> . soma relacao soma
    (35) expressao_rel -> . soma
    (36) soma -> . soma MAIS termo
    (37) soma -> . soma MENOS termo
    (38) soma -> . termo
    (39) termo -> . termo VEZES fator
    (40) termo -> . termo DIV fator
    (41) termo -> . fator
    (42) fator -> . ID
    (43) fator -> . NUMERO
    (44) fator -> . TRUE
    (45) fator -> . FALSE
    (46) fator -> . EPAR expressao DPAR
    (47) fator -> . NOT fator
    (48) fator -> . MENOS fator

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 47
    expressao_and                  shift and go to state 35
    expressao_rel                  shift and go to state 36
    soma                           shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 27

    (26) comando_leitura -> READ . EPAR lista_id DPAR

    EPAR            shift and go to state 48


state 28

    (27) comando_escrita -> WRITE . EPAR lista_expressoes DPAR

    EPAR            shift and go to state 49


state 29

    (5) declaracao_variaveis -> lista_id DP . tipo PV declaracao_variaveis
    (6) declaracao_variaveis -> lista_id DP . tipo PV
    (9) tipo -> . INTEGER
    (10) tipo -> . BOOLEAN

    INTEGER         shift and go to state 51
    BOOLEAN         shift and go to state 52

    tipo                           shift and go to state 50

state 30

    (8) lista_id -> ID VIRG . lista_id
    (7) lista_id -> . ID
    (8) lista_id -> . ID VIRG lista_id

    ID              shift and go to state 14

    lista_id                       shift and go to state 53

state 31

    (11) comando_composto -> BEGIN lista_comandos END .

    PF              reduce using rule 11 (comando_composto -> BEGIN lista_comandos END .)
    PV              reduce using rule 11 (comando_composto -> BEGIN lista_comandos END .)
    END             reduce using rule 11 (comando_composto -> BEGIN lista_comandos END .)
    ELSE            reduce using rule 11 (comando_composto -> BEGIN lista_comandos END .)


state 32

    (13) lista_comandos -> comando PV . lista_comandos
    (14) lista_comandos -> comando PV .
    (12) lista_comandos -> . comando
    (13) lista_comandos -> . comando PV lista_comandos
    (14) lista_comandos -> . comando PV
    (15) comando -> . atribuicao
    (16) comando -> . comando_condicional
    (17) comando -> . comando_enquanto
    (18) comando -> . comando_leitura
    (19) comando -> . comando_escrita
    (20) comando -> . comando_composto
    (21) comando -> . empty
    (22) atribuicao -> . ID DPIGUAL expressao
    (23) comando_condicional -> . IF expressao THEN comando
    (24) comando_condicional -> . IF expressao THEN comando ELSE comando
    (25) comando_enquanto -> . WHILE expressao DO comando
    (26) comando_leitura -> . READ EPAR lista_id DPAR
    (27) comando_escrita -> . WRITE EPAR lista_expressoes DPAR
    (11) comando_composto -> . BEGIN lista_comandos END
    (55) empty -> .

  ! reduce/reduce conflict for END resolved using rule 14 (lista_comandos -> comando PV .)
    END             reduce using rule 14 (lista_comandos -> comando PV .)
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 28
    BEGIN           shift and go to state 11
    PV              reduce using rule 55 (empty -> .)

  ! END             [ reduce using rule 55 (empty -> .) ]

    comando                        shift and go to state 16
    lista_comandos                 shift and go to state 54
    atribuicao                     shift and go to state 17
    comando_condicional            shift and go to state 18
    comando_enquanto               shift and go to state 19
    comando_leitura                shift and go to state 20
    comando_escrita                shift and go to state 21
    comando_composto               shift and go to state 22
    empty                          shift and go to state 23

state 33

    (22) atribuicao -> ID DPIGUAL . expressao
    (30) expressao -> . expressao OR expressao_and
    (31) expressao -> . expressao_and
    (32) expressao_and -> . expressao_and AND expressao_rel
    (33) expressao_and -> . expressao_rel
    (34) expressao_rel -> . soma relacao soma
    (35) expressao_rel -> . soma
    (36) soma -> . soma MAIS termo
    (37) soma -> . soma MENOS termo
    (38) soma -> . termo
    (39) termo -> . termo VEZES fator
    (40) termo -> . termo DIV fator
    (41) termo -> . fator
    (42) fator -> . ID
    (43) fator -> . NUMERO
    (44) fator -> . TRUE
    (45) fator -> . FALSE
    (46) fator -> . EPAR expressao DPAR
    (47) fator -> . NOT fator
    (48) fator -> . MENOS fator

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 55
    expressao_and                  shift and go to state 35
    expressao_rel                  shift and go to state 36
    soma                           shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 34

    (23) comando_condicional -> IF expressao . THEN comando
    (24) comando_condicional -> IF expressao . THEN comando ELSE comando
    (30) expressao -> expressao . OR expressao_and

    THEN            shift and go to state 56
    OR              shift and go to state 57


state 35

    (31) expressao -> expressao_and .
    (32) expressao_and -> expressao_and . AND expressao_rel

    THEN            reduce using rule 31 (expressao -> expressao_and .)
    OR              reduce using rule 31 (expressao -> expressao_and .)
    DO              reduce using rule 31 (expressao -> expressao_and .)
    PV              reduce using rule 31 (expressao -> expressao_and .)
    END             reduce using rule 31 (expressao -> expressao_and .)
    ELSE            reduce using rule 31 (expressao -> expressao_and .)
    DPAR            reduce using rule 31 (expressao -> expressao_and .)
    VIRG            reduce using rule 31 (expressao -> expressao_and .)
    AND             shift and go to state 58


state 36

    (33) expressao_and -> expressao_rel .

    AND             reduce using rule 33 (expressao_and -> expressao_rel .)
    THEN            reduce using rule 33 (expressao_and -> expressao_rel .)
    OR              reduce using rule 33 (expressao_and -> expressao_rel .)
    DO              reduce using rule 33 (expressao_and -> expressao_rel .)
    PV              reduce using rule 33 (expressao_and -> expressao_rel .)
    END             reduce using rule 33 (expressao_and -> expressao_rel .)
    ELSE            reduce using rule 33 (expressao_and -> expressao_rel .)
    DPAR            reduce using rule 33 (expressao_and -> expressao_rel .)
    VIRG            reduce using rule 33 (expressao_and -> expressao_rel .)


state 37

    (34) expressao_rel -> soma . relacao soma
    (35) expressao_rel -> soma .
    (36) soma -> soma . MAIS termo
    (37) soma -> soma . MENOS termo
    (49) relacao -> . IGUAL
    (50) relacao -> . DIFERENTE
    (51) relacao -> . MENORQUE
    (52) relacao -> . MENORIGUAL
    (53) relacao -> . MAIORQUE
    (54) relacao -> . MAIORIGUAL
